# Samples

./: CI.yaml  README.md  Sample Outcome.xlsx  azure-pipelines.yml  cx.yaml
.github/workflows/: main.yml  pr-review-report.yml
Install AzCopy V10.0/: Install AzCopy V10.0.json  install AzCopy V10.0.txt  readme.txt
Multi Step UI/: readme.txt
PyTestCoverageReport/: README.md  pyCoverage.yml
PyTestCoverageReport/example_app/: pyproject.toml
PyTestCoverageReport/example_app/src/: engineer.py  project.py
PyTestCoverageReport/example_app/tests/: test_engineer.py
TriggerADOPipelines/: Readme.md  sample.yaml
hobbyfy/website/: home.html  underco.html
